Fixed Assembly definitions / Added Previous Position Binder / Fixed Custom Block to make it work-ish

--- a/net.peeweek.vfxgraphtest/Editor/Unity.VisualEffectGraph.EditorTests.asmdef
+++ b/net.peeweek.vfxgraphtest/Editor/Unity.VisualEffectGraph.EditorTests.asmdef
@@ -2,8 +2,12 @@
     "name": "Unity.VisualEffectGraph.EditorTests",
     "references": [
         "Unity.VisualEffectGraph.Editor",
-        "Unity.VisualEffectGraph.Runtime"
+        "Unity.VisualEffectGraph.Runtime",
+        "Unity.RenderPipelines.Core.Runtime",
+        "Unity.RenderPipelines.Core.Editor",
+        "Unity.VisualEffectGraph.RuntimeTests"
     ],
+    "optionalUnityReferences": [],
     "includePlatforms": [
         "Editor"
     ],
