--- a/Runtime/VisualEffectGraphExtras.Runtime.asmdef
+++ b/Runtime/VisualEffectGraphExtras.Runtime.asmdef
@@ -1,16 +1,18 @@
 {
-    "name": "Unity.VisualEffectGraph.RuntimeTests",
+    "name": "VisualEffectGraphExtras.Runtime",
+    "rootNamespace": "",
     "references": [
         "Unity.VisualEffectGraph.Editor",
         "Unity.VisualEffectGraph.Runtime",
         "Unity.RenderPipelines.Core.Runtime"
     ],
-    "optionalUnityReferences": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": []
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
