--- a/Editor/VisualEffectGraphExtras.Editor.asmdef
+++ b/Editor/VisualEffectGraphExtras.Editor.asmdef
@@ -1,13 +1,13 @@
 {
-    "name": "Unity.VisualEffectGraph.EditorTests",
+    "name": "VisualEffectGraphExtras.Editor",
+    "rootNamespace": "",
     "references": [
         "Unity.VisualEffectGraph.Editor",
         "Unity.VisualEffectGraph.Runtime",
         "Unity.RenderPipelines.Core.Runtime",
         "Unity.RenderPipelines.Core.Editor",
-        "Unity.VisualEffectGraph.RuntimeTests"
+        "VisualEffectGraphExtras.Runtime"
     ],
-    "optionalUnityReferences": [],
     "includePlatforms": [
         "Editor"
     ],
@@ -16,5 +16,7 @@
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": []
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
