--- a/package.json
+++ b/package.json
@@ -1,7 +1,22 @@
 {
   "name": "net.peeweek.vfxgraph-extras",
   "displayName": "Visual Effect Graph (Extras)",
-  "version": "2019.4.0",
-  "unity": "2019.4",
-  "description": "Visual Effect Graph (Extras)"
+  "version": "2020.3.0",
+  "unity": "2020.3",
+  "description": "Visual Effect Graph Extras - A bunch of non-official experimentations around VFXGraph",
+    "keywords": [
+    "Visual",
+    "Effect",
+    "Graph",
+    "VFX",
+    "VFXGraph",
+    "Extras",
+    "VisualEffect"
+  ],
+  "hideInEditor": false,
+  "author" : 
+  {
+    "name" : "PeeWeeK.NET",
+    "url" : "https://github.com/peeweek/"
+  }
 }
