Added dependency for package

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "displayName": "Visual Effect Graph (Extras)",
   "version": "2020.3.2",
   "unity": "2020.3",
+  "dependencies": {
+    "com.unity.visualeffectgraph": "10.0.0",
+    "com.unity.shadergraph": "10.0.0"
+  },  
   "description": "Visual Effect Graph Extras - Extensions and Additions to VFX Graph, not endorsed nor supported by Unity.",
     "keywords": [
     "Visual",
